# lab-mini

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USAGE.md
examples/: demo.py
src/lab_mini/: __init__.py  analyzer.py  claim.py  loader.py  profiler.py  report.py  types.py
tests/: conftest.py  test_analyzer.py  test_claim.py  test_loader.py  test_profiler.py  test_public_api.py  test_report.py
tests/_fixtures/: sample_lab.csv
