[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-mini"
version = "0.1.0"
description = "Minimal reference for repeatable data-science labbing: load, profile, analyze, claim, report."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Justin Leopard", email = "justinleopard@users.noreply.github.com"},
]
keywords = ["data-science", "analysis", "statistics", "reporting", "reproducibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/JustinJLeopard/lab-mini"
Repository = "https://github.com/JustinJLeopard/lab-mini"
Issues = "https://github.com/JustinJLeopard/lab-mini/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_mini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "PLR2004"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

